finished refactoring and added correct/wrong color functionality

--- a/javascript/11_math_quiz/style.css
+++ b/javascript/11_math_quiz/style.css
@@ -80,7 +80,4 @@ body {
   order: 2
 }
 
-/* .answer:nth-child(even) {
-  background: red;
-} */
 
